build: add semantic-release changelog generator

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,3 +23,7 @@ jobs:
 
       # run tests!
       - run: npm test
+
+      - run:
+        name: release
+        command: npm run semantic-release || true
