--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@semantic-release/changelog": "^3.0.4",
     "@semantic-release/commit-analyzer": "^6.3.0",
     "@semantic-release/git": "^7.0.16",
+    "@semantic-release/npm": "^5.1.15",
     "@semantic-release/release-notes-generator": "^7.3.0",
     "@types/dotenv": "6.1.1",
     "@types/jest": "24.0.17",
